fix overflow

--- a/EcoNet/css/small.sass
+++ b/EcoNet/css/small.sass
@@ -25,18 +25,24 @@ div.nav-mob
     display: none
     flex-direction: column
     align-items: center
-    justify-content: space-around
+    justify-content: center
     height: 100vh
     width: 100vw
     position: fixed
     top: 0
     left: 0
     background-color: $rouge
-    color: white
     z-index: 9999
 
-    p
-        margin: 0
+    .nav-mob--link
+        margin: 5vw
+
+    a
+        text-decoration: none
+        color: white
+        border-bottom: 1px dashed #FFF
+        font-size: 2em
+
 // bouton de retour vers le haut
 .back-top
     display: none
